--- a/public/myStyles.css
+++ b/public/myStyles.css
@@ -4,3 +4,11 @@ body {
     background-image: url("pink.jpeg");
     background-size: cover;
 }
+
+a {
+    color: pink;
+}
+
+.navlink {
+    padding-left: 2em;
+}
