--- a/public/templates/albumview.html
+++ b/public/templates/albumview.html
@@ -1,9 +1,9 @@
 
         <h1>{{albumData.name}}</h1>
         <h2>Released in {{albumData.year}}</h2>
-        <img src="{{albumData.imgUrl}}" alt="album cover">
+        <img src="{{albumData.imgUrl}}" alt="album cover" class="albspace">
         <ul>
-            <li ng-repeat="song in albumData.trackList">{{song}}</li>
+            <li class="albumList" ng-repeat="song in albumData.trackList">{{song}}</li>
         </ul>
         <h3>Learn more about this album at <a href="{{albumData.wikiUrl}}">Wikipedia</a></h3>
         <br>
